[Refactor] DTO에 Entity 객체 넘겨주는 방식 삭제